--- a/test web/about.html
+++ b/test web/about.html
@@ -48,8 +48,9 @@
                 </div>
                 
                 <div class="about-text">
-                    <h3>Câu chuyện của chúng tôi</h3>
-                    <p>Như Nails được thành lập năm 2018 với mong muốn mang đến cho khách hàng những dịch vụ làm đẹp móng chuyên nghiệp và chất lượng nhất. Với hơn 5 năm kinh nghiệm trong ngành, chúng tôi tự hào là địa chỉ tin cậy của hàng nghìn khách hàng.</p>
+                    <h3>Tụi mình là ai?</h3>
+                    <p>Như Nails là một góc nhỏ xinh xắn, nơi bạn có thể thư giãn, làm đẹp và tìm lại năng lượng sau những bộn bề.
+                        Tụi mình tin rằng mỗi người phụ nữ đều xứng đáng được yêu chiều – từ đôi tay, mái tóc, đến từng nụ cười..</p>
                     
                     <h3>Tầm nhìn và sứ mệnh</h3>
                     <p>Chúng tôi cam kết mang đến:</p>
