--- a/test web/blog.html
+++ b/test web/blog.html
@@ -41,6 +41,9 @@
         </div>
         <section class="blog-posts">
             <h2>Blog Như Nails</h2>
+            <h2>Chuyện nghề, chuyện đời, chuyện làm đẹp…
+                Đôi khi tụi mình kể nhau nghe vài mẩu chuyện nhỏ – về một màu sơn mới, một kiểu tóc hot trend, hay một ngày mưa bất chợt ghé qua tiệm.
+                Blog của Như là nơi những câu chuyện đẹp được viết nên, nhẹ nhàng và gần gũi.</h2>
             <div class="search-container">
                 <input type="text" id="blogSearch" placeholder="Tìm kiếm bài viết...">
                 <button onclick="searchBlog()">Tìm kiếm</button>
