--- a/test web/booking.html
+++ b/test web/booking.html
@@ -40,6 +40,8 @@
         </div>
         <section class="booking-form">
             <h2>Đặt lịch hẹn</h2>
+            <h2>Đặt lịch – nhẹ nhàng như nhắn tin cho một người bạn.
+                Bạn có thể chọn thời gian, dịch vụ, và người phục vụ mình yêu thích. Như Nails luôn sẵn sàng chờ bạn, dù là sáng nắng hay chiều mưa.</h2>
             <form id="bookingForm">
                 <div class="form-group">
                     <label for="name">Họ và tên:</label>
