--- a/test web/gallery.html
+++ b/test web/gallery.html
@@ -42,7 +42,9 @@
         </div>
         <section class="gallery">
             <h2>Bộ sưu tập hình ảnh Như Nails</h2>
-            
+            <h2>Một chút lưu giữ – một chút yêu thương.
+                Khoảnh khắc khách hàng cười rạng rỡ, bàn tay vừa làm xong móng xinh, hay góc nhỏ nơi ánh nắng xuyên qua…
+                Mỗi bức ảnh là một lát cắt kỷ niệm tại Như Nails.</h2>
             <div class="gallery-filter">
                 <button class="filter-button active" data-filter="all">Tất cả</button>
                 <button class="filter-button" data-filter="manicure">Manicure</button>
