--- a/test web/index.html
+++ b/test web/index.html
@@ -145,8 +145,8 @@
             <div class="moment-caption">
                 <div class="moment-info">
                     <span class="customer-name">Khách Yến Nhi</span>
-                    <span class="service">Combo nails mắt mèo + đính đá</span>
-                    <p class="comment">"Làm nails ở Như là thói quen mỗi tháng của mình rồi, mê cực!"</p>
+                    <span class="service">Gọi Đầu</span>
+                    <p class="comment">"“Gội đầu xong mà nhẹ cả đầu, tóc thơm mùi thảo mộc, nằm lim dim tưởng đang ở spa xịn nào luôn á.”!"</p>
                     <span class="date">Tháng 03/2025</span>
                 </div>
                 <div class="moment-icons">
@@ -158,7 +158,23 @@
         </div>
         
         <div class="moment-item">
-            <img src="images/moments/1.jpg" alt="Khách hàng tại Như Nails">
+            <img src="images/moments/2.jpg" alt="Khách hàng tại Như Nails">
+            <div class="moment-caption">
+                <div class="moment-info">
+                    <span class="customer-name">Chị Hiền</span>
+                    <span class="service">Combo nails</span>
+                    <p class="comment">"Làm nails ở Như là thói quen mỗi tháng của mình rồi, mê cực!"</p>
+                    <span class="date">Tháng 03/2025</span>
+                </div>
+                <div class="moment-icons">
+                    <span>💖</span>
+                    <span>✨</span>
+                    <span>🎶</span>
+                </div>
+            </div>
+        </div>
+        <div class="moment-item">
+            <img src="images/moments/4.jpg" alt="Khách hàng tại Như Nails">
             <div class="moment-caption">
                 <div class="moment-info">
                     <span class="customer-name">Khách Yến Nhi</span>
@@ -174,7 +190,7 @@
             </div>
         </div>
         <div class="moment-item">
-            <img src="images/moments/1.jpg" alt="Khách hàng tại Như Nails">
+            <img src="images/moments/5.jpg" alt="Khách hàng tại Như Nails">
             <div class="moment-caption">
                 <div class="moment-info">
                     <span class="customer-name">Khách Yến Nhi</span>
@@ -190,7 +206,7 @@
             </div>
         </div>
         <div class="moment-item">
-            <img src="images/moments/1.jpg" alt="Khách hàng tại Như Nails">
+            <img src="images/moments/6.jpg" alt="Khách hàng tại Như Nails">
             <div class="moment-caption">
                 <div class="moment-info">
                     <span class="customer-name">Khách Yến Nhi</span>
@@ -206,7 +222,7 @@
             </div>
         </div>
         <div class="moment-item">
-            <img src="images/moments/1.jpg" alt="Khách hàng tại Như Nails">
+            <img src="images/moments/7.jpg" alt="Khách hàng tại Như Nails">
             <div class="moment-caption">
                 <div class="moment-info">
                     <span class="customer-name">Khách Yến Nhi</span>
@@ -222,7 +238,7 @@
             </div>
         </div>
         <div class="moment-item">
-            <img src="images/moments/1.jpg" alt="Khách hàng tại Như Nails">
+            <img src="images/moments/8.jpg" alt="Khách hàng tại Như Nails">
             <div class="moment-caption">
                 <div class="moment-info">
                     <span class="customer-name">Khách Yến Nhi</span>
@@ -238,7 +254,7 @@
             </div>
         </div>
         <div class="moment-item">
-            <img src="images/moments/1.jpg" alt="Khách hàng tại Như Nails">
+            <img src="images/moments/11.webp" alt="Khách hàng tại Như Nails">
             <div class="moment-caption">
                 <div class="moment-info">
                     <span class="customer-name">Khách Yến Nhi</span>
@@ -254,7 +270,7 @@
             </div>
         </div>
         <div class="moment-item">
-            <img src="images/moments/1.jpg" alt="Khách hàng tại Như Nails">
+            <img src="images/moments/10.jpg" alt="Khách hàng tại Như Nails">
             <div class="moment-caption">
                 <div class="moment-info">
                     <span class="customer-name">Khách Yến Nhi</span>
@@ -270,7 +286,7 @@
             </div>
         </div>
         <div class="moment-item">
-            <img src="images/moments/1.jpg" alt="Khách hàng tại Như Nails">
+            <img src="images/moments/13.jpg" alt="Khách hàng tại Như Nails">
             <div class="moment-caption">
                 <div class="moment-info">
                     <span class="customer-name">Khách Yến Nhi</span>
@@ -286,7 +302,7 @@
             </div>
         </div>
         <div class="moment-item">
-            <img src="images/moments/1.jpg" alt="Khách hàng tại Như Nails">
+            <img src="images/moments/14.png" alt="Khách hàng tại Như Nails">
             <div class="moment-caption">
                 <div class="moment-info">
                     <span class="customer-name">Khách Yến Nhi</span>
@@ -302,7 +318,7 @@
             </div>
         </div>
         <div class="moment-item">
-            <img src="images/moments/1.jpg" alt="Khách hàng tại Như Nails">
+            <img src="images/moments/16.jpg" alt="Khách hàng tại Như Nails">
             <div class="moment-caption">
                 <div class="moment-info">
                     <span class="customer-name">Khách Yến Nhi</span>
@@ -318,7 +334,7 @@
             </div>
         </div>
         <div class="moment-item">
-            <img src="images/moments/1.jpg" alt="Khách hàng tại Như Nails">
+            <img src="images/moments/17.jpg" alt="Khách hàng tại Như Nails">
             <div class="moment-caption">
                 <div class="moment-info">
                     <span class="customer-name">Khách Yến Nhi</span>
@@ -334,7 +350,7 @@
             </div>
         </div>
         <div class="moment-item">
-            <img src="images/moments/1.jpg" alt="Khách hàng tại Như Nails">
+            <img src="images/moments/18.jpg" alt="Khách hàng tại Như Nails">
             <div class="moment-caption">
                 <div class="moment-info">
                     <span class="customer-name">Khách Yến Nhi</span>
@@ -350,23 +366,7 @@
             </div>
         </div>
         <div class="moment-item">
-            <img src="images/moments/1.jpg" alt="Khách hàng tại Như Nails">
-            <div class="moment-caption">
-                <div class="moment-info">
-                    <span class="customer-name">Khách Yến Nhi</span>
-                    <span class="service">Combo nails mắt mèo + đính đá</span>
-                    <p class="comment">"Làm nails ở Như là thói quen mỗi tháng của mình rồi, mê cực!"</p>
-                    <span class="date">Tháng 03/2025</span>
-                </div>
-                <div class="moment-icons">
-                    <span>💖</span>
-                    <span>✨</span>
-                    <span>🎶</span>
-                </div>
-            </div>
-        </div>
-        <div class="moment-item">
-            <img src="images/moments/1.jpg" alt="Khách hàng tại Như Nails">
+            <img src="images/moments/19.png" alt="Khách hàng tại Như Nails">
             <div class="moment-caption">
                 <div class="moment-info">
                     <span class="customer-name">Khách Yến Nhi</span>
