--- a/test web/pricing.html
+++ b/test web/pricing.html
@@ -41,7 +41,9 @@
         </div>
         <section class="pricing">
             <h2>Bảng giá dịch vụ</h2>
-            
+            <h2>Rõ ràng – dễ hiểu – không lo “phát sinh”.
+                Chúng mình niêm yết giá dịch vụ đầy đủ, minh bạch.
+                Bạn chỉ cần chọn điều mình thích, còn lại để Như Nails chăm lo.</h2>
             <div class="price-tables">
                 <div class="price-table">
                     <h3>Manicure</h3>
