--- a/test web/services.html
+++ b/test web/services.html
@@ -41,7 +41,11 @@
         </div>
         <section class="services">
             <h2>Các dịch vụ của Như Nails</h2>
-            
+            <h2>Từ đầu đến chân – Như Nails chăm từng chút một.</h2>
+            <h2>Làm móng: sơn gel, đắp bột, vẽ móng nghệ thuật</h2>
+            <h2>Gội đầu thư giãn: gội massage, gội dưỡng sinh</h2>
+            <h2>Chăm sóc da tay - chân</h2>
+            <h2>Tất cả đều đi kèm với sự tận tâm và chút gì đó dịu dàng, như chính cái tên “Như”.</h2>
             <div class="service-categories">
                 <div class="service-category">
                     <img src="images/manicure.jpg" alt="Manicure">
